# mcp-fastmcp-langchain

./: README.md  main.py  pyproject.toml
clients/mcp-expense-client/: .env  clientTesting.py  mcpClientChatBot.py
mcp-expense-client/: clientTesting.py  mcpClientChatBot.py
mcp-math-server/: main.py
